# clinic_async

./: .gitignore  README.md  manage.py  pyproject.toml
app/: container.py
app/adapters/storage/: services.py  specialists.py
app/adapters/storage/db/: engine.py  session.py
app/adapters/storage/models/: __init__.py  analyzes.py  callbacks.py  contacts.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py  users.py
app/admin/: factory.py
app/admin/templates/: index.html
app/admin/templates/includes/: scripts.html  (+1 more)
app/admin/views/: analyzes.py
app/api/: factory.py
app/api/admin/: __init__.py  factory.py  test.py
app/api/root/: __init__.py  factory.py
app/api/routers/: analyzes.py  contacts.py  index.py  news.py  offices.py  pages.py  promotions.py  services.py  specialists.py
app/services/schemas/: specialists.py
app/settings/: db.py
app/templates/: specialists.html
app/templates/admin/: index.html
app/templates/main/: contacts.html
cicd/: docker-compose.local.yml
cli/: migrations.py  start.py
migrations/: env.py
migrations/versions/: 0654898a8108_initial.py  13f1c1ca3e85_models.py  2022_10_15_1819-3a559c94a0f6_init.py  2022_10_16_1327-83b2c11e24f4_init.py  2022_10_17_1042-f756cc4b275e_init.py  2022_10_17_1231-dfd589b861ce_added_pages.py  2022_10_17_1256-74b3c392d767_init.py  2022_10_17_1300-3b383c106c61_renamed_message_in_callbacks.py  2022_12_25_1351-4a7cdbf0969f_offices.py  2022_12_25_1535-2f0eaea88e68_office3.py  2022_12_25_1554-3813bc49ebc7_office4.py  caff5bdff9a7_test.py
utils/: constants.py  forms.py
(+18 files in other folders)
