[tool.poetry]
name = "clinic_async"
version = "0.1.0"
description = ""
authors = ["AsuraBot <homecat13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.79.1"
uvicorn = "^0.18.2"
click = "^8.1.3"
SQLAlchemy = "^1.4.40"
alembic = "^1.8.1"
sqlalchemy2-stubs = "^0.0.2-alpha.25"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
asyncpg = "^0.26.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
pylint = "^2.14.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
